--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,13 +10,13 @@ website:
         text: Home
       - projects.qmd
     tools:
-      - icon: twitter
-        href: https://twitter.com/
+      - icon: linkedin
+        href: www.linkedin.com/in/jingyi-yang82
       - icon: github
-        href: https://github.com/YOURUSERNAME/YOURREPO
+        href: https://github.com/Jing202822?tab=repositories
   page-footer:
     right: "Built with [Quarto](https://quarto.org/)"
-    left: "&copy; Copyright 2023, YOUR NAME"
+    left: "&copy; Copyright 2025, Jingyi Yang"
 
 format:
   html:
